css/displaycase.css
/* 

页面开头请添加CSS引用：
<link rel="stylesheet" type="text/css" href="./css/displaycase.css" />

请为展柜部分内容按如下方式赋予CSS类别：
<div class="site-content-wrapper display-case-wrapper">
<div class="site-content display-case">
  <h2 class="display-case-title">展柜三：城市居民粮食供应证</h2>
  <div class="display-case-exhibit">
    <div class="display-case-img-container">
      <img class="display-case-img" src="images/gallery1/1-4/玻璃柜展品1-2-2.png" />
    </div>
    <p class="display-case-text">文字说明</p>
  </div>
  ...更多展品
</div>
</div>
  
页面结尾请添加JS引用：
<script src="js/displaycase.js"></script>

  */

.display-case {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  column-gap: 15px;
  justify-items: center;
  margin: auto;
  padding-bottom: 10em;
}

.display-case-wrapper {
  background-color: var(--red, #b20000);
  width: 100%;
}

.display-case-title {
  margin: 23px;
  padding: 0;
  letter-spacing: .2rem;
  grid-column: 1 / -1;
  text-align: center;
  color: white;
}

.display-case-exhibit {
  width: 215px;
  margin-bottom: 19px;
  background-color: #d9d9d9;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.display-case-exhibit.bigger {
  grid-column: 1 / -1;
  width: 80%;
}

.display-case-img-container {
  margin: 20px;
  height: 100%;
  display: flex;
  align-items: center;
}

.display-case-exhibit.bigger .display-case-img-container {
  margin: 50px;
  min-width: 50%;
}

.display-case-img {
  width: 100%;
  height: auto;
}

.display-case-exhibit:hover {
  cursor: pointer;
}

.display-case-exhibit:not(.bigger):hover .display-case-img,
.display-case-exhibit:not(.bigger):hover .display-case-text {
  opacity: 0.6;
}

.display-case-text {
  font-size: 10px;
}

